plugins/kotlin/j2k/shared/tests/testData/newJ2k/invalidCode/catchWithoutParameter.java
// IGNORE_K2
// error message difference
class Test {
    public static void main(String[] args) {
        try {

        } catch (){

        }
    }
}